--- a/JamiatAhleHadees/Web.config
+++ b/JamiatAhleHadees/Web.config
@@ -51,4 +51,7 @@
         preCondition="managedHandler"/>
     </modules>
   </system.webServer>
+  <connectionStrings>
+    <add name="JamiatDb" connectionString="data source=SBS-PC\SQLEXPRESS;initial catalog=JamiatAhlehadeesV1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
