--- a/JamiatAhleHadees/JamiatAhleHadees.csproj
+++ b/JamiatAhleHadees/JamiatAhleHadees.csproj
@@ -1056,26 +1056,9 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
-    <Compile Include="Areas\Admin\Controllers\UserController.cs" />
     <Compile Include="Areas\BoardMember\BoardMemberAreaRegistration.cs" />
     <Compile Include="Areas\Panel\PanelAreaRegistration.cs" />
-    <Compile Include="Areas\User\Controllers\BoardMemberController.cs" />
-    <Compile Include="Areas\User\Controllers\BoardRequestProcessController.cs" />
-    <Compile Include="Areas\User\Controllers\EventRequestController.cs" />
-    <Compile Include="Areas\User\Controllers\ExistingMadarsaOperationController.cs" />
-    <Compile Include="Areas\User\Controllers\MadarsaController.cs" />
-    <Compile Include="Areas\User\Controllers\MadarsaExtenstionController.cs" />
-    <Compile Include="Areas\User\Controllers\MadarsaLandRequestController.cs" />
-    <Compile Include="Areas\User\Controllers\MasjidConstructionController.cs" />
     <Compile Include="Areas\User\Controllers\MasjidController.cs" />
-    <Compile Include="Areas\User\Controllers\MasjidExtensionController.cs" />
-    <Compile Include="Areas\User\Controllers\MasjidLandRequestController.cs" />
-    <Compile Include="Areas\User\Controllers\MasjidRenovationController.cs" />
-    <Compile Include="Areas\User\Controllers\NewMadarsaOperationsController.cs" />
-    <Compile Include="Areas\User\Controllers\PanelMemberController.cs" />
-    <Compile Include="Areas\User\Controllers\PanelmemberRquestProcessController.cs" />
-    <Compile Include="Areas\User\Controllers\RequestSubmitController.cs" />
-    <Compile Include="Areas\User\Controllers\UserController.cs" />
     <Compile Include="Areas\User\UserAreaRegistration.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -1217,23 +1200,6 @@
     <Content Include="Assets\plugins\input-mask\phone-codes\phone-be.json" />
     <Content Include="Assets\plugins\input-mask\phone-codes\phone-codes.json" />
     <Content Include="Areas\User\Views\Shared\_LayoutPage1.cshtml" />
-    <Content Include="Areas\User\Views\Masjid\Index.cshtml" />
-    <Content Include="Areas\User\Views\MasjidExtension\Index.cshtml" />
-    <Content Include="Areas\User\Views\MasjidRenovation\Index.cshtml" />
-    <Content Include="Areas\User\Views\NewMadarsaOperations\Index.cshtml" />
-    <Content Include="Areas\User\Views\EventRequest\Index.cshtml" />
-    <Content Include="Areas\User\Views\BoardRequestProcess\Index.cshtml" />
-    <Content Include="Areas\User\Views\PanelmemberRquestProcess\Index.cshtml" />
-    <Content Include="Areas\User\Views\BoardMember\Index.cshtml" />
-    <Content Include="Areas\User\Views\MadarsaExtenstion\Index.cshtml" />
-    <Content Include="Areas\User\Views\MadarsaLandRequest\Index.cshtml" />
-    <Content Include="Areas\User\Views\Madarsa\Index.cshtml" />
-    <Content Include="Areas\User\Views\MasjidConstruction\Index.cshtml" />
-    <Content Include="Areas\User\Views\MasjidLandRequest\Index.cshtml" />
-    <Content Include="Areas\User\Views\PanelMember\Index.cshtml" />
-    <Content Include="Areas\User\Views\RequestSubmit\Index.cshtml" />
-    <Content Include="Areas\User\Views\User\Index.cshtml" />
-    <Content Include="Areas\User\Views\ExistingMadarsaOperation\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -1243,6 +1209,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\Shared\" />
     <Folder Include="Areas\Admin\Views\User\" />
@@ -1253,6 +1220,7 @@
     <Folder Include="Areas\Panel\Models\" />
     <Folder Include="Areas\Panel\Views\Shared\" />
     <Folder Include="Areas\User\Models\" />
+    <Folder Include="Areas\User\Views\Masjid\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
