--- a/CommonLayer/CommonLayer.csproj
+++ b/CommonLayer/CommonLayer.csproj
@@ -40,34 +40,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommonModels\BoardMember.cs" />
-    <Compile Include="CommonModels\BoardRequestProcess.cs" />
-    <Compile Include="CommonModels\BoardType.cs" />
-    <Compile Include="CommonModels\DefaultInvolvement.cs" />
-    <Compile Include="CommonModels\EventRequest.cs" />
-    <Compile Include="CommonModels\EventRequestDetail.cs" />
-    <Compile Include="CommonModels\ExistingMadarsaOperationsRequest.cs" />
-    <Compile Include="CommonModels\Halqa.cs" />
-    <Compile Include="CommonModels\Madarsa.cs" />
-    <Compile Include="CommonModels\MadarsaExtensionRequest.cs" />
-    <Compile Include="CommonModels\MadarsaLandRequest.cs" />
-    <Compile Include="CommonModels\Masjid.cs" />
-    <Compile Include="CommonModels\MasjidConstructionRequest.cs" />
-    <Compile Include="CommonModels\MasjidExtensionRequest.cs" />
-    <Compile Include="CommonModels\MasjidLandRequest.cs" />
-    <Compile Include="CommonModels\MasjidRenovationRequest.cs" />
-    <Compile Include="CommonModels\NewMadarsaOperationsRequest.cs" />
-    <Compile Include="CommonModels\PanelInvolvement.cs" />
-    <Compile Include="CommonModels\RequestApprove.cs" />
-    <Compile Include="CommonModels\RequestComment.cs" />
-    <Compile Include="CommonModels\RequestLike.cs" />
-    <Compile Include="CommonModels\RequestSubmit.cs" />
-    <Compile Include="CommonModels\RequestType.cs" />
-    <Compile Include="CommonModels\Role.cs" />
-    <Compile Include="CommonModels\User.cs" />
-    <Compile Include="CommonModels\UserType.cs" />
-    <Compile Include="CommonModels\Zone.cs" />
-    <Compile Include="EventMaster.cs" />
+    <Compile Include="CommonModels\BoardMemberModel.cs" />
+    <Compile Include="CommonModels\BoardRequestProcessModel.cs" />
+    <Compile Include="CommonModels\BoardTypeModel.cs" />
+    <Compile Include="CommonModels\DefaultInvolvementModel.cs" />
+    <Compile Include="CommonModels\EventMaster.cs" />
+    <Compile Include="CommonModels\EventRequestModel.cs" />
+    <Compile Include="CommonModels\EventRequestDetailModel.cs" />
+    <Compile Include="CommonModels\ExistingMadarsaOperationsRequestModel.cs" />
+    <Compile Include="CommonModels\HalqaModel.cs" />
+    <Compile Include="CommonModels\MadarsaModel.cs" />
+    <Compile Include="CommonModels\MadarsaExtensionRequestModel.cs" />
+    <Compile Include="CommonModels\MadarsaLandRequestModel.cs" />
+    <Compile Include="CommonModels\MasjidConstructionRequestModel.cs" />
+    <Compile Include="CommonModels\MasjidExtensionRequestModel.cs" />
+    <Compile Include="CommonModels\MasjidLandRequestModel.cs" />
+    <Compile Include="CommonModels\MasjidModel.cs" />
+    <Compile Include="CommonModels\MasjidRenovationRequestModel.cs" />
+    <Compile Include="CommonModels\NewMadarsaOperationsRequestModel.cs" />
+    <Compile Include="CommonModels\PanelInvolvementModel.cs" />
+    <Compile Include="CommonModels\RequestApproveModel.cs" />
+    <Compile Include="CommonModels\RequestCommentModel.cs" />
+    <Compile Include="CommonModels\RequestLikeModel.cs" />
+    <Compile Include="CommonModels\RequestSubmitModel.cs" />
+    <Compile Include="CommonModels\RequestTypeModel.cs" />
+    <Compile Include="CommonModels\RoleModel.cs" />
+    <Compile Include="CommonModels\UserModel.cs" />
+    <Compile Include="CommonModels\UserTypeModel.cs" />
+    <Compile Include="CommonModels\ZoneModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
